<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary100">

    <TextView
        android:id="@+id/tvWeightSetting"
        style="@style/RunningApp.Text.Label.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/change_weight"
        android:textColor="@color/neutral2_900"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etWeightSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:hint="@string/enter_your_weight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="@color/neutral2_700"
        app:layout_constraintTop_toBottomOf="@id/tvWeightSetting" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/save"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etWeightSetting" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary100"
        android:text="@string/sign_out"
        android:textColor="@color/base000"
        app:cornerRadius="12dp"
        app:icon="@drawable/ic_sign_out"
        app:iconTint="@color/negative300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"
        app:strokeColor="@color/negative300"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
