<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRunDetailsTitle"
        style="@style/RunningApp.Text.Paragraph.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_details"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBack" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/neutral1_200"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:strokeColor="@color/neutral1_200"
        app:strokeWidth="1dp">

        <fragment
            android:id="@+id/mapView"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/map"
            map:cameraZoom="13"
            map:liteMode="true"
            map:mapType="normal" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvDate"
        style="@style/RunningApp.Text.Label.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:textColor="@color/neutral2_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvMap"
        tools:text="01.01.2023" />

    <TextView
        android:id="@+id/tvLocation"
        style="@style/RunningApp.Text.Label.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/neutral2_700"
        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvDate"
        tools:text="Dnipro" />

    <TextView
        android:id="@+id/tvDuration"
        style="@style/RunningApp.Text.Paragraph.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:drawablePadding="2dp"
        android:gravity="center"
        app:drawableStartCompat="@drawable/ic_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocation"
        tools:text="Duration: 10s" />

    <TextView
        android:id="@+id/tvDistance"
        style="@style/RunningApp.Text.Paragraph.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:drawablePadding="2dp"
        android:gravity="center"
        app:drawableStartCompat="@drawable/ic_run"
        app:layout_constraintStart_toStartOf="@+id/tvDuration"
        app:layout_constraintTop_toBottomOf="@+id/tvDuration"
        tools:text="Distance: 10m" />

    <TextView
        android:id="@+id/tvCalories"
        style="@style/RunningApp.Text.Paragraph.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:drawablePadding="2dp"
        android:gravity="center"
        app:drawableStartCompat="@drawable/ic_bolt"
        app:layout_constraintStart_toStartOf="@+id/tvDuration"
        app:layout_constraintTop_toBottomOf="@+id/tvDistance"
        tools:text="Calories burned: 10m" />
</androidx.constraintlayout.widget.ConstraintLayout>